--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -7,7 +7,7 @@
     tools:context=".DetailsActivity">
 
     <TextView
-        android:id="@+id/nameText2"
+        android:id="@+id/countryText"
         android:layout_width="248dp"
         android:layout_height="53dp"
         android:layout_marginTop="32dp"
