--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -7,36 +7,42 @@
     tools:context=".DetailsActivity">
 
     <TextView
-        android:id="@+id/countryText"
-        android:layout_width="248dp"
-        android:layout_height="53dp"
-        android:layout_marginTop="32dp"
-        android:text="LandMark Country"
-        android:textAlignment="center"
+        android:id="@+id/nameText"
+        android:layout_width="182dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="136dp"
+        android:gravity="center"
+        android:text="TextView"
         android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameText" />
+        app:layout_constraintTop_toBottomOf="@+id/countryText" />
+
+    <TextView
+        android:id="@+id/countryText"
+        android:layout_width="189dp"
+        android:layout_height="58dp"
+        android:layout_marginBottom="43dp"
+        android:gravity="center"
+        android:text="TextView"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/nameText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="312dp"
-        android:layout_height="234dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="382dp"
+        android:layout_height="226dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="58dp"
+        android:layout_marginEnd="26dp"
+        android:layout_marginBottom="66dp"
+        app:layout_constraintBottom_toTopOf="@+id/countryText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
-
-    <TextView
-        android:id="@+id/nameText"
-        android:layout_width="248dp"
-        android:layout_height="53dp"
-        android:layout_marginTop="32dp"
-        android:text="LandMark Name"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
